# printnanny-gst-plugin-rs

./: .gitignore  Cargo.toml  Cross.toml  Makefile
.github/workflows/: ci.yml  clippy.yml  release-config.yml  release-plugin.yml  release.yml
bitbake/: printnanny-gst-plugin_0.1.0.bb
fixtures/: demo-video-1.toml
notebook/: qc_analysis_v0_4_0.ipynb
printnanny-cam-settings/: Cargo.toml  LICENSE
printnanny-cam-settings/src/: error.rs  lib.rs  settings.rs
printnanny-gst-config/: Cargo.toml
printnanny-gst-config/src/: config.rs  error.rs  lib.rs
printnanny-gst-plugin/: Cargo.toml
printnanny-gst-plugin/src/: nnstreamer.rs
printnanny-gst-plugin/src/dataframe_filesink/: imp.rs
src/: lib.rs  nnstreamer.rs
src/arrow_decoder/: imp.rs  mod.rs
src/dataframe_agg/: imp.rs
src/dataframe_decoder/: imp.rs  mod.rs
src/dataframe_filesink/: imp.rs  mod.rs
src/nats_sink/: imp.rs
tests/: tests.rs
tools/ci/: build.bash
